--- a/index.Rmd
+++ b/index.Rmd
@@ -8,6 +8,7 @@ subtitle: Subtitle here if desired
 
 [~ 200 words]
 
+Making a change to commit.
 Clearly stated background and questions / hypotheses / problems being addressed. Sets up the analysis in an interesting and compelling way.
 
 # Materials and methods
